[package]
name = "axum-auth"
description = "High-level http auth extractors for axum"
version = "0.4.0"
readme = "README.md"
repository = "https://github.com/owez/axum-auth"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.59"
axum-core = "0.3.0"
base64 = "0.13"
http = "0.2"

[dev-dependencies]
axum = "0.6"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

[features]
auth-basic = []
auth-bearer = []

default = ["auth-basic", "auth-bearer"]
