[package]
name = "axum-auth"
description = "High-level http auth extractors for axum"
version = "0.4.2"
readme = "README.md"
repository = "https://github.com/owez/axum-auth"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.74"
axum-core = "0.4"
base64 = "0.21.5"
http = "1"

[dev-dependencies]
axum = "0.7"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

[features]
auth-basic = []
auth-bearer = []

default = ["auth-basic", "auth-bearer"]
