[package]
name = "axum-auth"
description = "High-level http auth extractors for axum"
version = "0.8.1"
readme = "README.md"
repository = "https://github.com/owez/axum-auth"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum-core = "0.5"
base64 = "0.22.1"
http = "1.2.0"

[dev-dependencies]
axum = "0.8.1"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }

[features]
auth-basic = []
auth-bearer = []

default = ["auth-basic", "auth-bearer"]
